Misc fixes - extra carriage return and wrong font size in css

--- a/css/tabber.css
+++ b/css/tabber.css
@@ -45,7 +45,7 @@ ul.tabbernav li a
  border-bottom: none;
  background: #DDE;
  text-decoration: none;
- font-size: 10px;
+ font-size: 9px;
 }
 
 ul.tabbernav li a:link { color: #448; }
